# Learning

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.deploy.yml  docker-compose.yml  example.env  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_persistent_agent_analytics.py  0002_runtime_agent_provider.py  0003_knowledge_registry_security.py  0004_learning_workflow_submissions.py
backend/app/: __init__.py  main.py
backend/app/adapters/: __init__.py
backend/app/agents/: __init__.py  base.py  examiner.py  planner.py  researcher.py
backend/app/application/: coverage.py  health.py
backend/app/controllers/: __init__.py  analytics.py  auth.py  learning.py  sessions.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/di/: __init__.py  providers.py
backend/app/domain/: __init__.py  health.py  topic_intent.py
backend/app/harness/: __init__.py  runtime.py
backend/app/mcp/: audit.py  tools.py
backend/app/models/: database.py
backend/app/schemas/: analytics.py  auth.py  (+2 more)
backend/evaluations/: fixtures.json  golden-baseline.json
backend/scripts/: check_eval_regression.py  live_provider_evaluation.py
backend/tests/: conftest.py  test_agent_contracts.py  test_api.py  test_benchmarks.py  test_gemini_cli_runtime.py  test_health.py  test_learning_workflow.py  test_postgres_roles.py  test_security.py  test_topic_intent.py  test_write_guard.py
(+56 files in other folders)
