[project]
name = "learning-coach-api"
version = "0.4.0"
description = "Learning Coach API"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14,<2",
    "aiosqlite>=0.20,<1",
    "asyncpg>=0.30,<1",
    "cryptography>=44,<46",
    "dishka>=1.6,<2",
    "email-validator>=2.2,<3",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "psycopg[binary]>=3.2,<4",
    "pydantic>=2.12,<3",
    "PyJWT>=2.10,<3",
    "pwdlib[argon2]>=0.2,<1",
    "python-dotenv>=1,<2",
    "sqlalchemy[asyncio]>=2.0,<3",
    "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
    "pytest>=8,<10",
    "pytest-asyncio>=0.25,<1",
    "pytest-benchmark>=5,<6",
]
[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "live_provider: requires installed and authenticated external agent CLI",
    "integration: requires containerized infrastructure",
]
